# py-e

./: .gitignore  Dockerfile  pyproject.toml
doc/: Docker命令速查图解.md  ai.md  ai_agent.md  api.md  mcp.md  playwright.md  py-project.md  python-core.md  python-env.md  python.md  python工程化.md  reflex.md  think.md  uv.md  多线程.md  异步.md
docker/: Dockerfile  casaos.md  docker-app-android.md  docker-app-pc.md  docker-compose.yml  docker-project.md  github.md  phone_app.md
src/mydemo/: main.py  test.py
src/mydemo/agents/: ppt_agent.py
src/mydemo/ai/: agent_test.py  my_crew.py  prompt_templdate.py
src/mydemo/api/: app.py  demo_api.py  qianwen.py  user_api.py
src/mydemo/core/: container.py  globel_exception_handle.py  response_code_enum.py  response_model.py  result.py
src/mydemo/db/: app.py  config.py  db_service.py
src/mydemo/example/: my_copyparty.py  my_excel_manager.py  my_excel_openpyxl.py  my_excel_pandas.py  my_file.py  my_gtts.py  my_pandas.py  my_piper_tts.py  my_pyttsx3.py  my_unittest.py  test.py
src/mydemo/exception/: business_exception.py  business_exception_constant.py
src/mydemo/llm/: app.py  test.py  tool.py  tool_impl.py
src/mydemo/mcp/: mcp_fastapi.py  mcp_simple.py
src/mydemo/meili/: .env  app.py  client.py  models.py  service.py  settings.py
src/mydemo/pywright/: chrome_async_util.py  chrome_util.py  cookies.json  demo4.py  first.py  kuake.json  playwright_demo1.py  playwright_demo2.py  playwright_demo3.py
src/mydemo/seed/: config.py  factory.py  (+2 more)
src/mypy/: Crawlee.md  css.md  main.py
tests/: dict_json.py  my_saync.py  react.py
(+959 files in other folders)
