[project]
name = "mypy"
version = "0.1.0"
description = ""
authors = [
    {name = "noname",email = "<jxp@qq.com>"}
]
#readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "pypandoc (>=1.15,<2.0)",
    "pandoc (>=2.4,<3.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "punq (>=0.7.0,<0.8.0)"
]

[tool.poetry]
packages = [{include = "mydemo", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
